reduce min height of image div to prevent excess whitespace below wide landscape images

--- a/app/index.css
+++ b/app/index.css
@@ -15,7 +15,7 @@ img {
 }
 
 .img-wrapper {
-	min-height: 300px;
+	min-height: 250px;
 }
 
 .sidebar {
